--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -12,6 +12,6 @@
     <i class="material-icons mat-icon-default side-menu-icon">group_work</i> Communities</a>
   <a mat-list-item href="#" class="mat-icon-default">
     <i class="material-icons mat-icon-default side-menu-icon">work_outline</i> Jobs</a>
-  <a mat-list-item href="#" class="mat-icon-default">
+  <a mat-list-item routerLink="/users" class="mat-icon-default">
     <i class="material-icons mat-icon-default side-menu-icon">people_outline</i> Users</a>
 </mat-nav-list>
