--- a/src/app/users/profile/favorites/favorites.component.html
+++ b/src/app/users/profile/favorites/favorites.component.html
@@ -18,7 +18,7 @@
       <h2 [routerLink]="['/posts', feed.slug ]" class="title">
         <a class="post-link">{{feed?.name}}</a>
       </h2>
-      <p class="body-2">{{feed?.body}}</p>
+      <p class="body-2">{{feed?.body | truncate:200}}</p>
     </mat-card-content>
 
 
