feat(): fix value preposition

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,43 +1,27 @@
 <div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" style="margin-top: 66px;" [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'">
   <div fxFlex="45" fxLayout="column" fxLayoutGap="30px">
-    <mat-card class="example-card" *ngFor="let feed of feeds" style="margin-bottom: 20px" infiniteScroll [infiniteScrollDistance]="5"
-      [infiniteScrollThrottle]="50" (scrolled)="onScroll(meta?.next_page)" [hidden]="loading">
-      <div class="row" fxFlexAlign="start">
-        <mat-card-header fxFlex="50"  [routerLink]="['/users', feed?.author?.slug]">
-          <div mat-card-avatar [ngStyle]="{'background-image': 'url(' + feed?.author?.avatar?.thumb.url+ ')', 'background-size': 'cover'}"></div>
-          <mat-card-title>{{feed?.author?.full_name}}</mat-card-title>
-          <mat-card-subtitle>@{{feed?.author?.slug}}</mat-card-subtitle>
-        </mat-card-header>
-
-        <div fxFlex="50" style="text-align: right">
-          <small>{{feed?.created_at | amTimeAgo}}</small>
-        </div>
-      </div>
-
-
-      <mat-card-content>
-        <h2 [routerLink]="['posts', feed.slug ]" class="title">
-          <a class="post-link">{{feed?.name}}</a>
-        </h2>
-        <p class="body-2">{{feed?.body | truncate:200}}</p>
-      </mat-card-content>
-
-
-      <mat-card-actions app-post-action-bar fxLayout="row" [post]="feed" postType="question" [componentName]='componentName'> </mat-card-actions>
-      <div *ngIf="feed.sharePost">
-        <app-share-post *ngIf="feed?.id" [title]="feed?.name" [postUrL]="postUrL+'posts/'+ feed?.slug" postType="Question"></app-share-post>
-      </div>
-    </mat-card>
+    <app-post-card 
+      *ngFor="let feed of feeds" 
+      style="margin-bottom: 20px" 
+      infiniteScroll 
+      [infiniteScrollDistance]="5" 
+      [infiniteScrollThrottle]="50" 
+      (scrolled)="onScroll(meta?.next_page)" 
+      [hidden]="loading" 
+      [feed]="feed" 
+      [loading]="loading" 
+      [meta]="meta">
+    </app-post-card>
 
     <span *ngIf="meta?.next_page && loadingAnswer" style="text-align: center">
-        <mat-card class="example-card">
-            <facebook-content-loader></facebook-content-loader>
-          </mat-card>
-    </span>
+  <mat-card class="example-card">
+    <facebook-content-loader></facebook-content-loader>
+  </mat-card>
+</span>
 
-    <mat-card class="example-card" *ngFor="let feed of feeds" [hidden]="!loading">
-      <facebook-content-loader></facebook-content-loader>
-    </mat-card>
+<mat-card class="example-card" *ngFor="let feed of feeds" [hidden]="!loading">
+  <facebook-content-loader></facebook-content-loader>
+</mat-card>
   </div>
   <div fxFlex="25">
     <mat-card class="example-card">
@@ -49,5 +33,4 @@
       </mat-card-content>
     </mat-card>
   </div>
-
 </div>
