--- a/src/app/users/settings/settings.component.scss
+++ b/src/app/users/settings/settings.component.scss
@@ -61,5 +61,25 @@
     margin-bottom: 8px;
   }
   
+  .profile-card-image {
+    width: 150px !important;
+    height: 150px !important;
+    margin-right: 15px;
+  }
+  .profile-card-title {
+    margin-bottom: 8px;
+    font-size: 30px;
+    margin-top: 15px;
+  }
+
+  .tab-backgroundcolor {
+    background-color: #fff;
+    margin: 0px !important;
+    a {
+      text-decoration: none;
+    }
+  }
+
+  
    
   
