--- a/src/app/posts/answers/answers.component.html
+++ b/src/app/posts/answers/answers.component.html
@@ -19,8 +19,7 @@
           <div class="post-body" markdown [data]="answer?.body"></div>
         </mat-card-content>
 
-        <mat-card-actions *ngIf="answer" app-post-action-bar fxLayout="row" [post]="answer" postType="answer" [componentName]='componentName'>
-        </mat-card-actions>
+        <app-post-action-bar *ngIf="answer"  fxLayout="row" [post]="answer" postType="answer" [componentName]='componentName'></app-post-action-bar>
 
         <app-comments *ngIf="answer?.id" [slug]="answer?.id" commentableType="Answer"></app-comments>
         <app-comment-form *ngIf="answer?.id" [slug]="answer?.id" commentableType="Answer"></app-comment-form>
