--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     <i class="material-icons mat-icon-default side-menu-icon">assignment </i>Blogs</a>
   <a mat-list-item href="#" class="mat-icon-default">
     <i class="material-icons mat-icon-default side-menu-icon">public</i> News</a>
-  <a mat-list-item href="#" class="mat-icon-default">
+  <a mat-list-item routerLink="/communities" class="mat-icon-default">
     <i class="material-icons mat-icon-default side-menu-icon">group_work</i> Communities</a>
   <a mat-list-item href="#" class="mat-icon-default">
     <i class="material-icons mat-icon-default side-menu-icon">work_outline</i> Jobs</a>
