--- a/src/app/users/profile/following/following.component.scss
+++ b/src/app/users/profile/following/following.component.scss
@@ -18,3 +18,11 @@
     display: block;
     margin-bottom: 8px;
   }
+
+  .tab-backgroundcolor {
+    background-color: #fff;
+    margin: 0px !important;
+    a {
+      text-decoration: none;
+    }
+  }
