--- a/src/app/users/profile/profile.component.html
+++ b/src/app/users/profile/profile.component.html
@@ -1,38 +1,36 @@
-<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'" [ngStyle.xs]="{'margin-top': '40px'}">
-  <div fxFlex="50" fxLayout="column" fxLayoutGap="30px">
+<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'"
+  [ngStyle.xs]="{'margin-top': '40px'}">
+  <div fxFlex="52" fxLayout="column" fxLayoutGap="30px">
     <mat-card>
+      <img mat-card-image *ngIf="user.has_cover_photo" [src]="user.cover_photo.timeline.url" alt="Photo of a Shiba Inu">
       <mat-card-header fxLayout.xs="column" fxLayoutAlign.xs="center center">
         <div mat-card-avatar class="profile-card-image" [ngStyle]="{'background-image': 'url(' + user?.avatar?.medium?.url + ')', 'background-size': 'cover'}"></div>
         <mat-card-title fxLayoutAlign.xs="center center" class="profile-card-title">{{user?.full_name}}</mat-card-title>
         <mat-card-subtitle fxLayoutAlign.xs="center center" [ngStyle.xs]="{'text-align': 'center'}">{{user?.bio}}</mat-card-subtitle>
         <mat-card-subtitle fxLayoutAlign.xs="center center">
-          <a mat-icon-button href="">
+          <a mat-icon-button target="_blank" *ngIf="user.personal_website" [href]="user.personal_website">
             <i class="fas fa-globe-africa"></i>
           </a>
-          <a mat-icon-button href="">
+          <a mat-icon-button target="_blank" *ngIf="user.twitter_url" [href]="user.facebook_url">
             <i class="fab fa-facebook"></i>
           </a>
-          <a mat-icon-button href="">
+          <a mat-icon-button target="_blank" *ngIf="user.facebook_url" [href]="user.twitter_url">
             <i class="fab fa-twitter"></i>
           </a>
         </mat-card-subtitle>
-        <mat-card-subtitle fxLayoutAlign.xs="center center" fxLayoutGap="20px" *ngIf="currentUser">
-          <button mat-raised-button (click)="onClick" *ngIf="currentUser.id === user.id">
-            <mat-icon>settings</mat-icon> SETTINGS</button>
-            <div *ngIf="currentUser.id !== user.id">
-                <button mat-raised-button color="primary" (click)="onClick"  *ngIf="user.follow">
-                     FOLLOW</button>
-                    <button mat-raised-button color="warn" (click)="onClick"  *ngIf="!user.follow">
-                         UNFOLLOW</button>
-            </div>
-          
+        <mat-card-subtitle fxLayoutAlign.xs="center center" fxLayoutGap="20px">
+            <button mat-raised-button (click)="navigateToSettings()" *ngIf="currentUser.id === user.id">
+                <mat-icon>settings</mat-icon> SETTINGS
+              </button>
+            <app-relationiship-button *ngIf="currentUser.id !== user.id"[user]="user"></app-relationiship-button>
         </mat-card-subtitle>
       </mat-card-header>
-      
+
       <div fxLayout="row" fxLayoutAlign="space-between center" fxLayout.xs="column" fxLayoutGap.xs="40px">
         <mat-list>
           <mat-list-item>
-            <i class="material-icons">location_on</i> &nbsp; {{user.location? user.location : 'Unknown'}} </mat-list-item>
+            <i class="material-icons">location_on</i> &nbsp; {{user.location? user.location : 'Unknown'}}
+          </mat-list-item>
           <mat-list-item>
             <i class="material-icons">email</i> &nbsp; {{user.email}} (private)</mat-list-item>
           <mat-list-item>
@@ -40,7 +38,8 @@
           <mat-list-item>
             <i class="material-icons">visibility</i> &nbsp; {{ user.views }} Profile views </mat-list-item>
           <mat-list-item>
-            <i class="material-icons">access_time</i> &nbsp; Last seen {{ user.last_requested_at | amTimeAgo }} </mat-list-item>
+            <i class="material-icons">access_time</i> &nbsp; Last seen {{ user.last_requested_at | amTimeAgo }}
+          </mat-list-item>
         </mat-list>
         <div fxLayout="row" fxLayoutGap="20px" style="text-align: center">
           <div>
@@ -59,14 +58,13 @@
       </div>
     </mat-card>
     <nav mat-tab-nav-bar class="tab-backgroundcolor mat-elevation-z3" style="margin-bottom: 0px;">
-      <a mat-tab-link *ngFor="let link of profileNavLink" [routerLink]="[link.link]" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+      <a mat-tab-link *ngFor="let link of profileNavLink" [routerLink]="[link.link]" routerLinkActive #rla="routerLinkActive"
+        [active]="rla.isActive">
         {{link.name}} &nbsp; &nbsp; &nbsp;
         <span color="primary" [matBadge]="link.count? link.count: ''"></span>
       </a>
     </nav>
 
     <router-outlet></router-outlet>
-
-
   </div>
 </div>
