--- a/src/app/users/profile/answers/answers.component.html
+++ b/src/app/users/profile/answers/answers.component.html
@@ -18,7 +18,7 @@
       </mat-card>
     </span>
     
-    <mat-card class="example-card" *ngFor="let feed of posts" [hidden]="!loading" style="margin-bottom: 20px" >
+    <mat-card class="example-card" *ngFor="let feed of questions" [hidden]="!loading" style="margin-bottom: 20px" >
       <facebook-content-loader></facebook-content-loader>
     </mat-card>
 </div>
