--- a/src/app/users/settings/settings.component.html
+++ b/src/app/users/settings/settings.component.html
@@ -49,7 +49,7 @@
           <mat-icon matSuffix>playlist_add</mat-icon>
         </mat-form-field>
 
-        <button mat-raised-button [disabled]="updating" (click)="onClick" color="primary">UPDATE</button>
+        <button mat-raised-button [disabled]="updating"  color="primary">UPDATE</button>
       </div>
     </form>
 
@@ -74,7 +74,7 @@
           <mat-icon matSuffix>public</mat-icon>
         </mat-form-field>
 
-        <button mat-raised-button [disabled]="updating" (click)="onClick" color="primary">UPDATE</button>
+        <button mat-raised-button [disabled]="updating"  color="primary">UPDATE</button>
       </div>
     </form>
   </mat-card>
