--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar [hidden]="(isHandset$ | async)" class="mat-elevation-z8">
-  <h1 routerLink="">VitaNote +</h1>
+<mat-toolbar [hidden]="(isHandset$ | async)" class="mat-elevation-z8" color="primary">
+  <span routerLink="">ONOZOR +</span>
 </mat-toolbar>
 <mat-nav-list>
   <a mat-list-item href="#" class="mat-icon-default">
