--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" style="margin-top: 66px;" [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'">
+<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
   <div fxFlex="45" fxLayout="column" fxLayoutGap="30px">
     <app-post-card 
       *ngFor="let feed of feeds" 
@@ -10,6 +10,7 @@
       [hidden]="loading" 
       [feed]="feed" 
       [loading]="loading" 
+      [componentName]="componentName"
       [meta]="meta">
     </app-post-card>
 
