--- a/src/app/posts/answers/answers.component.html
+++ b/src/app/posts/answers/answers.component.html
@@ -1,6 +1,8 @@
-<div *ngFor="let answer of allanswers" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll(pageMeta.next_page)">
-  <div fxLayout="row" *ngIf="!answer?.editing" fxLayoutGap="20px" fxLayout.xs="column" [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'"
-    [attr.id]="'answer-' + answer?.id">
+<div *ngFor="let answer of allanswers" infiniteScroll 
+[infiniteScrollDistance]="2" 
+[infiniteScrollThrottle]="50" 
+(scrolled)="onScroll(pageMeta.next_page)" style="margin-bottom: 20px">
+  <div fxLayout="row" *ngIf="!answer?.editing" fxLayoutGap="20px" fxLayout.xs="column" [attr.id]="'answer-' + answer?.id">
     <div fxFlex="50" fxLayout="column" fxLayoutGap="30px">
       <mat-card>
         <div class="row" fxFlexAlign="start">
