--- a/src/app/posts/create-post/create-post.component.html
+++ b/src/app/posts/create-post/create-post.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column" style="margin-top: 66px;" [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'">
-  <div fxFlex="50" fxLayout="column" fxLayoutGap="30px">
+<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column"  [ngClass]="!(isHandset$ | async )? 'margin-top2' : 'ball'">
+  <div fxFlex="50" fxFlex.xs="100" fxLayout="column" fxLayoutGap="30px">
     <mat-card class="example-card">
 
       <mat-progress-bar mode="indeterminate" [hidden]="!isSubmited"></mat-progress-bar>
